--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ html
     </script>
     <footer>
         <p>&copy; 2025 XIM MATRIX. جميع الحقوق محفوظة.</p>
-        <a href="https://store.xim.tech/products/xim-matrix" target="_blank">تعرف على المزيد</a>
+        <a href="https://vip-script.com/" target="_blank">تعرف على المزيد</a>
     </footer>
         
 <!-- قسم موثقين بمنصة الأعمال -->
