--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html
     <meta name="description" content="XIM MATRIX - جهاز متقدم لتعزيز تجربة الألعاب، يدعم PS5, PC, Xbox مع تقنيات Smart Translator و Smart Actions لتحسين الأداء.">
 
     <!-- كلمات مفتاحية تساعد محركات البحث على تحسين نتائج البحث -->
-    <meta name="keywords" content="XIM MATRIX, ألعاب الشوتر, تحسين التصويب, Xbox, Playstation, PC, Smart Translator, Smart Actions, الألعاب التنافسية, تحسين الأداء">
+    <meta name="keywords" content="XIM MATRIX, ألعاب الشوتر, تحسين التصويب, Xbox, Playstation, PC, Smart Translator, Smart Actions, ASISST AIM , تحسين الأداء">
 
     <!-- تحديد اسم الكاتب أو الفريق المسؤول عن تطوير الصفحة -->
     <meta name="author" content="XIM MATRIX Team">
