--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ html
                 <p>برمجـه وتطوير VIP-SCRIPT.COM</p>
                 <p>نـــــــايف العـــتيبي - VIP</p>
                 <p>Wed, Jul 10, 2024 3:26 PM</p>
-                <h1>قسم السكربتات كـرونس زين + ماكس</h1>
+                <h1>قسم XIM MATRIX SMART VIP</h1>
             </div>
     
         <h1>XIM MATRIX - مميزات متقدمة</h1>
