--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
     </div>
 
     <script>
-        // عرض الإعلان بعد 10 ثوانٍ
+        /*/ عرض الإعلان بعد 10 ثوانٍ
         window.onload = function() {
             const initialMessage = document.getElementById('initial-message');
             const popup = document.getElementById('popup');
@@ -581,7 +581,7 @@
         function rejectOffer() {
             document.querySelector('.initial-message').style.display = 'none';
         }
-    </script>
+    </script> */
     <footer>
         <p>&copy; 2025 XIM MATRIX. جميع الحقوق محفوظة.</p>
         <a href="https://vip-script.com/" target="_blank">تعرف على المزيد</a>
